tests/baselines/reference/jsdocReadonlyDeclarations(strict=true).errors.txt
jsdocReadonlyDeclarations.js(5,17): error TS7006: Parameter 'n' implicitly has an 'any' type.
jsdocReadonlyDeclarations.js(23,34): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== jsdocReadonlyDeclarations.js (2 errors) ====
    class C {
        /** @readonly */
        x = 6
        /** @readonly */
        constructor(n) {
                    ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
            this.x = n
            /**
             * @readonly
             * @type {number}
             */
            this.y = n
        }
    }
    new C().x
    
    function F() {
        /** @readonly */
        this.z = 1
    }
    
    // https://github.com/microsoft/TypeScript/issues/38401
    class D {
        constructor(/** @readonly */ x) {}
                                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    